@@ -12,18 +12,10 @@
  */
 package org.openhab.automation.java223.internal.codegeneration;
 
-import static org.openhab.automation.java223.common.Java223Constants.LIB_DIR;
-
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -31,20 +23,16 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.openhab.automation.java223.common.Java223Constants;
 import org.openhab.core.automation.annotation.RuleAction;
 import org.openhab.core.items.Item;
 import org.openhab.core.items.ItemRegistry;
-import org.openhab.core.service.WatchService;
-import org.openhab.core.service.WatchService.Kind;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingRegistry;
-import org.openhab.core.thing.UID;
 import org.openhab.core.thing.binding.ThingActions;
 import org.openhab.core.thing.binding.ThingActionsScope;
 import org.osgi.framework.BundleContext;
@@ -59,79 +47,41 @@ import freemarker.template.TemplateExceptionHandler;
 import freemarker.template.TemplateMethodModelEx;
 
 /**
- * The {@link ClassGenerator} is responsible for generating the additional classes for rule development
+ * The {@link ClassGenerator} is responsible for generating the additional classes
+ * helping for rule development
  *
  * @author Jan N. Klug - Initial contribution
  * @author Gwendal Roulleau - Refactor using freemarker
  */
 @NonNullByDefault
-public class ClassGenerator implements WatchService.WatchEventListener {
-
-    public static final String HELPER_PACKAGE = "helper";
+public class ClassGenerator {
 
     private final Logger logger = LoggerFactory.getLogger(ClassGenerator.class);
 
-    private final Map<String, String> generatedClasses = new HashMap<>();
-
-    private final Path folder;
     private final ItemRegistry itemRegistry;
     private final ThingRegistry thingRegistry;
     private final BundleContext bundleContext;
 
+    private ClassWriter classWriter;
+    private DependencyGenerator dependencyGenerator;
+
     Configuration cfg = new Configuration(Configuration.VERSION_2_3_32);
 
-    public ClassGenerator(Path folder, ItemRegistry itemRegistry, ThingRegistry thingRegistry,
-            BundleContext bundleContext) throws IOException {
-        this.folder = folder;
+    public ClassGenerator(ClassWriter classWriter, DependencyGenerator dependencyGenerator, ItemRegistry itemRegistry,
+            ThingRegistry thingRegistry, BundleContext bundleContext) {
+        this.classWriter = classWriter;
         this.itemRegistry = itemRegistry;
         this.thingRegistry = thingRegistry;
         this.bundleContext = bundleContext;
-
-        String helperPackageFolder = HELPER_PACKAGE.replaceAll("\\.", "/");
-        Files.createDirectories(folder.resolve(helperPackageFolder));
+        this.dependencyGenerator = dependencyGenerator;
 
         cfg.setClassForTemplateLoading(ClassGenerator.class, "/");
         cfg.setDefaultEncoding("UTF-8");
         cfg.setTemplateExceptionHandler(TemplateExceptionHandler.RETHROW_HANDLER);
     }
 
-    private String lastName(String fullName) {
-        int lastDotIndex = fullName.lastIndexOf('.');
-        return lastDotIndex == -1 ? fullName : fullName.substring(lastDotIndex + 1);
-    }
-
-    private boolean replaceIfNotEqual(String packageName, String className, String generatedClass) throws IOException {
-        String key = packageName + "." + className;
-        if (!generatedClass.equals(generatedClasses.put(key, generatedClass))) {
-            writeHelperFile(packageName, className, generatedClass);
-            return true;
-        } else {
-            logger.debug("{} has not changed.", key);
-            return false;
-        }
-    }
-
-    private String classToImport(Class<?> clazz) {
-        if ((clazz.isPrimitive())
-                || (clazz.isArray() && Objects.requireNonNull(clazz.getComponentType()).isPrimitive())) {
-            return "";
-        }
-        if (clazz.isArray()) {
-            return Objects.requireNonNull(clazz.getComponentType()).getName();
-        } else {
-            return clazz.getName();
-        }
-    }
-
-    private String typeToParameter(Type type) {
-        return type instanceof GenericArrayType
-                ? lastName(Objects.requireNonNull(((GenericArrayType) type).getGenericComponentType()).getTypeName())
-                        + "[]"
-                : lastName(type.getTypeName());
-    }
-
     @SuppressWarnings({ "unused", "null" })
-    public void generateActions() throws IOException, TemplateException {
+    public synchronized void generateActions() throws IOException, TemplateException {
         List<ThingActions> thingActions;
         try {
             Set<Class<?>> classes = new HashSet<>();
@@ -143,7 +93,9 @@ public class ClassGenerator implements WatchService.WatchEventListener {
             return;
         }
 
-        Template template = cfg.getTemplate("/ThingAction.ftl");
+        Template templateAction = cfg.getTemplate("/helper/generated/ThingAction.ftl");
+        Map<String, Set<String>> actionsByScope = new HashMap<>();
+        Set<String> allClassesToImport = new HashSet<>();
 
         for (ThingActions thingAction : thingActions) {
             Class<? extends ThingActions> clazz = thingAction.getClass();
@@ -154,7 +106,9 @@ public class ClassGenerator implements WatchService.WatchEventListener {
             }
             String scope = scopeAnnotation.name().toString();
             String simpleClassName = clazz.getSimpleName();
-            String packageName = getPackageName("generated", "action", scope);
+            String packageName = classWriter.getPackageName("generated", scope);
+            actionsByScope.computeIfAbsent(scope, (key -> new HashSet<String>()))
+                    .add(packageName + "." + simpleClassName);
 
             logger.trace("Processing class '{}' in package '{}'", simpleClassName, clazz.getPackageName());
 
@@ -167,14 +121,10 @@ public class ClassGenerator implements WatchService.WatchEventListener {
 
             for (Method method : methods) {
                 String name = method.getName();
-                String returnValue = lastName(method.getGenericReturnType().getTypeName());
-
-                classesToImport.addAll(
-                        Arrays.asList(method.getParameterTypes()).stream().map(pt -> classToImport(pt)).toList());
-                classesToImport.add(classToImport(method.getReturnType()));
+                String returnValue = parseArgumentType(method.getGenericReturnType(), classesToImport);
 
                 List<String> parametersType = Arrays.stream(method.getGenericParameterTypes())
-                        .map(this::typeToParameter).collect(Collectors.toList());
+                        .map(pt -> parseArgumentType(pt, classesToImport)).toList();
 
                 MethodDTO methodDTO = new MethodDTO(returnValue, name, parametersType);
                 logger.trace("Found method '{}' with parameters '{}' and return value '{}'.", name, parametersType,
@@ -182,6 +132,8 @@ public class ClassGenerator implements WatchService.WatchEventListener {
 
                 methodsDTO.add(methodDTO);
             }
+
+            allClassesToImport.addAll(classesToImport);
 
             Map<String, Object> context = new HashMap<>();
             context.put("packageName", packageName);
@@ -191,17 +143,78 @@ public class ClassGenerator implements WatchService.WatchEventListener {
             context.put("methods", methodsDTO);
 
             StringWriter writer = new StringWriter();
-            template.process(context, writer);
+            templateAction.process(context, writer);
 
-            replaceIfNotEqual(packageName, simpleClassName, writer.toString());
+            classWriter.replaceHelperFileIfNotEqual(packageName, simpleClassName, writer.toString());
         }
+
+        // adding classes to the lib of exported dependencies
+        dependencyGenerator.setClassesToAddToDependenciesLib(allClassesToImport);
+
+        // now generate action factory :
+        Template templateActionFactory = cfg.getTemplate("/helper/generated/Actions.ftl");
+        Map<String, Object> context = new HashMap<>();
+        context.put("packageName", classWriter.getPackageName("generated"));
+        context.put("classesToImport", actionsByScope.values().stream().flatMap(s -> s.stream()).toList());
+        @SuppressWarnings("unchecked")
+        TemplateMethodModelEx tmmLastName = (args) -> classNameSure(
+                ((List<freemarker.template.SimpleScalar>) args).get(0).getAsString());
+        context.put("lastName", tmmLastName);
+        @SuppressWarnings("unchecked")
+        TemplateMethodModelEx tmmCapitalize = (args) -> capitalize(
+                ((List<freemarker.template.SimpleScalar>) args).get(0).getAsString());
+        context.put("camelCase", tmmCapitalize);
+        context.put("actionsByScope", actionsByScope);
+        StringWriter writer = new StringWriter();
+        templateActionFactory.process(context, writer);
+
+        classWriter.replaceHelperFileIfNotEqual(classWriter.getPackageName("generated"), "Actions", writer.toString());
     }
 
-    public void generateItems() throws IOException, TemplateException {
-        Collection<Item> items = itemRegistry.getItems();
-        String packageName = getPackageName("generated");
+    /**
+     * Return a user friendly short readable name (without package details) and add the relevant full class name to the
+     * imports
+     * list
+     *
+     * @param type
+     * @param imports A set to add imports into
+     * @return a user friendly printable name (without package)
+     */
+    protected static String parseArgumentType(Type type, Set<String> imports) {
+        String typeName = type.getTypeName();
+        String currentName = "";
+        String friendlyFullType = "";
+        for (int i = 0; i < typeName.length(); i++) {
+            char ch = typeName.charAt(i);
+            boolean isAOKClassCharacter = Character.isLetter(ch) || Character.isDigit(ch)
+                    || Character.valueOf(ch).equals('_') || Character.valueOf(ch).equals('.');
+            if (isAOKClassCharacter) {
+                currentName += ch;
+            }
+            if (!isAOKClassCharacter || i == typeName.length() - 1) {
+                if (!currentName.isEmpty()) {
+                    Optional<String> classNameOfAPackage = className(currentName);
+                    if (classNameOfAPackage.isPresent()) {
+                        imports.add(currentName);
+                        friendlyFullType += classNameOfAPackage.get();
+                    } else {
+                        friendlyFullType += currentName;
+                    }
+                }
+                if (!isAOKClassCharacter) {
+                    friendlyFullType += ch;
+                }
+                currentName = "";
+            }
+        }
+        return friendlyFullType;
+    }
 
-        Template template = cfg.getTemplate("/Items.ftl");
+    public synchronized void generateItems() throws IOException, TemplateException {
+        Collection<Item> items = itemRegistry.getItems();
+        String packageName = classWriter.getPackageName("generated");
+
+        Template template = cfg.getTemplate("/helper/generated/Items.ftl");
         Map<String, Object> context = new HashMap<>();
         context.put("packageName", packageName);
         context.put("items", items);
@@ -211,61 +224,47 @@ public class ClassGenerator implements WatchService.WatchEventListener {
         StringWriter writer = new StringWriter();
         template.process(context, writer);
 
-        replaceIfNotEqual(packageName, "Items", writer.toString());
+        classWriter.replaceHelperFileIfNotEqual(packageName, "Items", writer.toString());
     }
 
-    public void generateThings() throws IOException, TemplateException {
+    public synchronized void generateThings() throws IOException, TemplateException {
         Collection<Thing> things = thingRegistry.getAll();
-        String packageName = getPackageName("generated");
+        String packageName = classWriter.getPackageName("generated");
 
-        Template template = cfg.getTemplate("/Things.ftl");
+        Template template = cfg.getTemplate("/helper/generated/Things.ftl");
         Map<String, Object> context = new HashMap<>();
         context.put("packageName", packageName);
 
         context.put("things", things);
-        TemplateMethodModelEx tmm = (args) -> escapeName(args);
+
+        @SuppressWarnings("unchecked")
+        TemplateMethodModelEx tmm = (args) -> escapeName(
+                ((List<freemarker.ext.beans.StringModel>) args).get(0).getWrappedObject().toString());
         context.put("escapeName", tmm);
 
         StringWriter writer = new StringWriter();
         template.process(context, writer);
 
-        replaceIfNotEqual(packageName, "Things", writer.toString());
+        classWriter.replaceHelperFileIfNotEqual(packageName, "Things", writer.toString());
     }
 
-    private static String getPackageName(String... packagePath) {
-        return HELPER_PACKAGE + "." + String.join(".", packagePath);
+    private static String capitalize(String minusString) {
+        return minusString.substring(0, 1).toUpperCase() + minusString.substring(1);
     }
 
-    private void writeHelperFile(String packageName, String className, String generatedClass) throws IOException {
-        String packageFolder = packageName.replaceAll("\\.", "/");
-        Path javaFile = folder.resolve(packageFolder + "/" + className + "." + Java223Constants.JAVA_FILE_TYPE);
-
-        Files.createDirectories(javaFile.getParent());
-        try (FileOutputStream outFile = new FileOutputStream(javaFile.toFile())) {
-            outFile.write(generatedClass.getBytes(StandardCharsets.UTF_8));
-            logger.debug("Wrote generated class: {}", javaFile.toAbsolutePath());
-        }
+    private static String escapeName(String textToEscape) {
+        return textToEscape.replace(":", "_").replace("-", "_");
     }
 
-    private String escapeName(List<freemarker.ext.beans.StringModel> textToEscape) {
-        return ((UID) (textToEscape.get(0).getWrappedObject())).toString().replace(":", "_").replace("-", "_");
+    private static Optional<String> className(String fullName) {
+        int lastDotIndex = fullName.lastIndexOf('.');
+        return lastDotIndex == -1 ? Optional.empty() : Optional.of(fullName.substring(lastDotIndex + 1));
     }
 
-    @Override
-    public void processWatchEvent(Kind kind, Path path) {
-        Path fullPath = LIB_DIR.resolve(path);
-        if (fullPath.getFileName().toString().endsWith("." + Java223Constants.JAVA_FILE_TYPE)
-                && (kind == Kind.DELETE || kind == Kind.MODIFY)) {
-            // by intercepting delete or modify signal, we ensure that we remove java file from our internal database to
-            // regenerate them thereafter
-            String key = fullPath.toString().replace(File.separator, ".").substring(0, fullPath.toString().length());
-            generatedClasses.remove(key);
-        } else {
-            logger.trace("Received '{}' for path '{}' - ignoring (wrong extension)", kind, fullPath);
-        }
+    private static String classNameSure(String fullName) {
+        return className(fullName).get();
     }
 
     public static record MethodDTO(String returnValueType, String name, List<String> parameterTypes) {
-
     }
 }
